--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "7.0.3",
     "react-scripts": "3.0.1",
     "redux": "4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "2.3.0",
     "typesafe-actions": "4.4.0"
   },
@@ -19,6 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "babel src/ -d lib/",
+    "eslint": "node_modules/.bin/eslint src/",
     "prepublish": "npm run build"
   },
   "eslintConfig": {
@@ -42,6 +44,12 @@
     "@types/react-redux": "7.0.9",
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.10.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.0",
     "flow-bin": "0.100.0",
     "redux-devtools-extension": "2.13.8"
   }
